[gd_scene load_steps=6 format=3 uid="uid://d15w037yxsuym"]

[ext_resource type="Script" path="res://Scenes/main.gd" id="1_fg0fw"]
[ext_resource type="Texture2D" uid="uid://bhb6ut6mbccq7" path="res://Assets/background.png" id="2_xfgs8"]
[ext_resource type="Texture2D" uid="uid://bmwypt5wec64e" path="res://Assets/pc.png" id="3_hsun8"]
[ext_resource type="PackedScene" uid="uid://bb6astalm73q5" path="res://Objects/Thoughts.tscn" id="4_mup8m"]
[ext_resource type="Script" path="res://Objects/thoughts.gd" id="5_7m6sj"]

[node name="Node" type="Node"]
script = ExtResource("1_fg0fw")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
offset_right = 1155.0
offset_bottom = 644.0
texture = ExtResource("2_xfgs8")

[node name="TextureRect2" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -407.5
offset_top = -370.0
offset_right = 407.5
offset_bottom = 426.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_hsun8")

[node name="Hint1" parent="." instance=ExtResource("4_mup8m")]
unique_name_in_owner = true
text = "text"
script = ExtResource("5_7m6sj")

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
offset_left = 1214.0
offset_top = 735.0
offset_right = 1307.0
offset_bottom = 773.0

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="Camera2D" type="Camera2D" parent="."]
unique_name_in_owner = true
position = Vector2(965, 546)

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
